Update AttributionFHIRTest.java